DuPont DevSB/src/objects/Privacy_Search_Request__c.object
<CustomObject>
    <fields>
        <fullName>Contacts__c</fullName>
        <label>Contacts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Potential Name Match Found</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Email Match Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <label>Leads</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Potential Name Match Found</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Email Match Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Privacy Search Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Leads__c</columns>
        <columns>Contacts__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Email__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Transfer_to_OneDupont_Privacy_Search_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer to OneDupont</label>
        <language>en_US</language>
        <queue>Transfer_to_OneDupont</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PSR-{00000}</displayFormat>
        <label>Privacy Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Search Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>